(BugId:21365) more styles for wikia hubs on mobile
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@50351 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/WikiaHubs/css/ColorsPerVertical.scss
+++ b/extensions/wikia/WikiaHubs/css/ColorsPerVertical.scss
@@ -65,6 +65,20 @@
 			}
 		}
 	}
+	&.wkMobile {
+		.WikiaHubs {
+			h2 {
+				border-left: 6px solid $color-wikiahome-hubcolor;
+				border-bottom: 0;
+			}
+			.title-wrapper {
+				border-bottom: 0;			
+			}
+			a {
+				color: #006CB0;
+			}
+		}
+	}
 }
 
 .page-Video_Games {
